--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.2.1",
     "react-icons": "^4.3.1",
-    "react-super-responsive-table": "^5.2.0"
+    "react-super-responsive-table": "^5.2.0",
+    "sweetalert2": "^11.4.7"
   }
 }
