--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client"
   ],
   "engines": {
-    "npm":"7.23.0"
+    "npm": "7.23.0"
   },
   "scripts": {
     "build": "SKIP_PREFLIGHT_CHECK=true npm run build --workspace=client",
@@ -18,7 +18,7 @@
   },
   "eslintConfig": {
     "ignorePatterns": "build",
-    "extends":[
+    "extends": [
       "react-app",
       "react-app/jest",
       "./node_modules/standard/eslintrc.json"
@@ -37,6 +37,9 @@
   },
   "keywords": [],
   "author": "The Best Team",
-  "license": "ISC"
-  
+  "license": "ISC",
+  "dependencies": {
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
+  }
 }
